--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mocha-parallel-tests",
+  "name": "mocha-parallel-tests-es6",
   "version": "2.0.2",
   "homepage": "https://github.com/yandex/mocha-parallel-tests",
   "description": "Run mocha tests in parallel",
@@ -19,6 +19,7 @@
   "dependencies": {
     "circular-json": "^0.5.4",
     "debug": "3.1.0",
+    "tslib": "^1.9.2",
     "yargs": "11.0.0"
   },
   "repository": {
@@ -58,7 +59,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=8"
+    "node": ">=6"
   },
   "peerDependencies": {
     "mocha": "3.0.0 - 5.x.x"
